# agent_backend

./: .env.example  main.py  pyproject.toml  utils.py
api/: deps.py  main.py
api/routes/: agents.py  login.py  private.py  users.py  utils.py
core/: config.py  db.py
mod/agents/interface/: handler.py
mod/agents/models/: base.py  dto.py
mod/agents/services/: stream.py
mod/agents/services/models/: base.py  simple.py
mod/login/handlers/: handler.py
mod/login/models/: dto.py
mod/login/services/: crud.py
mod/user/handlers/: handler.py
mod/user/interface/: admin.py
mod/user/models/: base.py  dao.py  dto.py
mod/user/services/: crud.py
