[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "bcrypt==4.3.0",
    "emails>=0.6",
    "fastapi[standard]>=0.119.1",
    "mysql-connector-python>=9.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings[dotenv]>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
]
